# rust_backend

./: .env  .gitignore  Cargo.toml  build.rs
migrations/: 20250919084859_create_todos_table.sql
proto/: todo.proto
src/: client.rs  main.rs
