[package]
name = "rust_backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = "0.14"
prost = "0.14"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tonic-prost-build = "0.14"
tonic-prost = "0.14.2"
dotenvy = "0.15"


[build-dependencies]
tonic-prost-build = "0.14"
